--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>This is a random paragraph. One more sentence.</p>
     </main>
     
-    <footer></footer>
+    <footer>Created by REM Technological Industries llc. &copy;2022.</footer>
   </body>
 
 </html>
