--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <main>
       <h2>Messin' around with my first website.</h2>
-      <p>This is a random paragraph. One more sentence.</p>
+      <p>Click to go to my <a href = "itis3135/">ITIS 3135 course.</a></p>
     </main>
     
     <footer>Created by REM Technological Industries llc. &copy;2022.</footer>
