--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -18,7 +18,7 @@
       <p>This is a random paragraph. One more sentence.</p>
     </main>
     
-    <footer>Created by REM Technological Idustries &copy;2022.</footer>
+    <footer>Created by REM Technological Idustries llc. &copy;2022.</footer>
   </body>
 
 </html>
