--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,7 +4,7 @@
   
   <head>
     <meta charset = "utf-8">
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Introduction</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylessheet">
     <!-- link to style sheet -->
   </head>
@@ -15,9 +15,9 @@
     </header>
     
     <main>
-      <h2>Homepage.</h2>
+      <h2>Introduction.</h2>
       <p>This is a random paragraph. One more sentence.</p>
-      <p>Click to go to my <a href = "introduction.html">ITIS 3135 Introduction.</a></p>
+      <p>Click to go to my <a href = "index.html">ITIS 3135 Homepage.</a></p>
       <p>Click to go to my <a href = "contract.html">ITIS 3135 Course Contract.</a></p>
     </main>
     
