--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang = "en-US">
-  <link href = "styles/default.css" type = "text/css" rel = "stylessheet">
+  <link href = "C:\Users\rober\OneDrive\Documents\itis3135_work\itis3135.github.io\itis3135\styles\default.css" type = "text/css" rel = "stylessheet">
     <!-- link to style sheet -->
   <head>
     <meta charset = "utf-8">
