--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,7 +14,7 @@
     </header>
     
     <main>
-      <img src = "images/duck.jpg">
+      <img class = "image" src = "images/duck.jpg">
       <h2>Homepage.</h2>
       <p>This is a random paragraph. One more sentence.</p>
       <p>Click to go to my <a href = "introduction.html">ITIS 3135 Introduction.</a></p>
