--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,14 +8,14 @@
     <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
   </head>
 
-  <body>
+  <body class = "body">
     <header>
       <h1>Robert E. Mauney § ITIS3135 § Rackley Mallard</h1>
     </header>
     
     <main>
       <img class = "image" src = "images/duck.jpg">
-      <h2>Homepage.</h2>
+      <h2 class = "header">Homepage.</h2>
       <p>This is a random paragraph. One more sentence.</p>
       <p>Click to go to my <a href = "introduction.html">ITIS 3135 Introduction.</a></p>
       <p>Click to go to my <a href = "contract.html">ITIS 3135 Course Contract.</a></p>
