--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,8 +4,8 @@
   
   <head>
     <meta charset = "utf-8">
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Introduction</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylessheet">
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard § Introduction</title>
+    <link href = "styles/default.css" rel = "stylessheet">
     <!-- link to style sheet -->
   </head>
 
