--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset = "utf-8">
     <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylessheet">
+    <link rel = "stylessheet" type = "text/css" href = "styles/default.css">
     <!-- link to style sheet -->
   </head>
 
