--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset = "utf-8">
     <title>Robert E. Mauney § ITIS3135 § Rackley Mallard § Introduction</title>
-    <link rel = "stylessheet" type = "text/css" href = "styles/default.css">
+    <link rel = "stylessheet" type = "text/css" href = "styles/default.css" />
     <!-- link to style sheet -->
   </head>
 
