--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,9 +16,19 @@
     <main>
       <img class = "image image_border" src = "images/duck.jpg">
       <h2>Homepage.</h2>
-      <p>This is a random paragraph. One more sentence.</p>
       <p>Click to go to my <a href = "introduction.html">ITIS 3135 Introduction.</a></p>
       <p>Click to go to my <a href = "contract.html">ITIS 3135 Course Contract.</a></p>
+      <div>
+        <p>Personal and Profesional Background:</p>
+        <ul>
+          <li>PERSONAL: Born and raised in Mint Hill North Carolina. Have an affinity for anything electronic or mechanical.</li>
+          <li>PROFESSIONAL : Have had quite a few jobs since I was 16. Currently a Manger at AutoZone.</li>
+          <li> ACADEMIC: Graduated from Hickory Grove in 2017. Have attended UNCC since and plan on graduating here.</li>
+          <li>PROGRAMMING/SOFTWARE: First introduced to coding in high school and have enjoyed it since. I know the basic languages such as java, python and c++.</li>
+          <li>From N.C.</li>
+          <li>RANDOM FACT: I drive a 1985 BMW 635csi that I am currently restoring.</li>
+        </ul>
+      </div>
     </main>
     
     <footer>Created by REM Technological Idustries llc. &copy;2022.</footer>
