--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <footer>
     
     <nav>
-      <a href="index.html">Home</a>§;
-      <a href="itis3135/introduction.html">Introduction</a>§;
-      <a href="itis3135/contract.html">Contract</a>§;
+      <a href="index.html">Home</a> §
+      <a href="itis3135/introduction.html">Introduction</a> §
+      <a href="itis3135/contract.html">Contract</a> §
       <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
     </nav>
     
