--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <h1 text-align = "center">Welcome to the Rackley Mallard</h1>
+        <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
     </main>
 
 </body>
