--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -9,7 +9,7 @@
 
     <header>
       <nav>
-        <a href="index.html">Home</a> §
+        <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="itis3135/introduction.html">Introduction</a> §
         <a href="itis3135/contract.html">Contract</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
