--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -10,8 +10,8 @@
     <header>
       <nav>
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
-        <a href="itis3135/introduction.html">Introduction</a> §
-        <a href="itis3135/contract.html">Contract</a> §
+        <a href="introduction.html">Introduction</a> §
+        <a href="contract.html">Contract</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
