--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -42,11 +42,11 @@
     
     <p>
         <a href="https://validator.w3.org/">
-            <img src="itis3135/images/button_validation_html5.png" class="image" alt="HTML Validation">
+            <img src=images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
         <a href="https://jigsaw.w3.org/css-validator/">
-            <img src="itis3135/images/button_validation_css.png" class="image" alt="CSS Validation">
+            <img src=images/button_validation_css.png" class="image" alt="CSS Validation">
         </a>
     </p>
 
