--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
-    <link href="itis3135/styles/default.css" type="text/css" rel="stylesheet">
+    <link href="styles/default.css" type="text/css" rel="stylesheet">
 </head>
 
     <header>
