--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -18,7 +18,7 @@
 
     <main>
         <h1 style="text-align:center">A small introduction for the founder of the Rackley Mallard</h1>
-        <img src="images/robert_mauney.jpeg" alt="Robert Mauney">
+        <img class = "image image_border" src="images/robert_mauney.jpeg" alt="Robert Mauney">
         <div>
           <p>Personal and Profesional Background:</p>
           <ul>
