--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -41,14 +41,14 @@
     REM Technological Industries. &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/">
-            <img src=images/button_validation_html5.png" class="image" alt="HTML Validation">
-        </a>
+      <a href="https://validator.w3.org/">
+          <img src="images/button_validation_html5.png" class="image" alt="HTML Validation">
+      </a>
 
-        <a href="https://jigsaw.w3.org/css-validator/">
-            <img src=images/button_validation_css.png" class="image" alt="CSS Validation">
-        </a>
-    </p>
+      <a href="https://jigsaw.w3.org/css-validator/">
+          <img src="images/button_validation_css.png" class="image" alt="CSS Validation">
+      </a>
+  </p>
 
 </footer>
 </body>
