--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="index.html">Home</a> §
         <a href="itis3135/introduction.html">Introduction</a> §
         <a href="itis3135/contract.html">Contract</a> §
+        <a href="itis3135/tables.html">Tables</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
