--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -12,6 +12,7 @@
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="introduction.html">Introduction</a> §
         <a href="contract.html">Contract</a> §
+        <a href="tables.html">Tables</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
