--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 <footer>
     
   <nav>
-    <a href="index.html">Home</a> §
-    <a href="itis3135/introduction.html">Introduction</a> §
-    <a href="itis3135/contract.html">Contract</a> §
+    <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
+    <a href="https://www.freecodecamp.org/eschlee">FreeCodeCamp</a> §
+    <a href="https://github.com/IZALZO">GitHub</a> §
+    <a href="https://github.com/IZALZO/itis3135.github.io">GitHub.itis3135</a> §
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
   </nav>
     
