--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -40,8 +40,9 @@
     
   <nav>
     <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
-    <a href="introduction.html">Introduction</a> §
-    <a href="contract.html">Contract</a> §
+    <a href="https://www.freecodecamp.org/eschlee">FreeCodeCamp</a> §
+    <a href="https://github.com/IZALZO">GitHub</a> §
+    <a href="https://github.com/IZALZO/itis3135.github.io">GitHub.itis3135</a> §
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
   </nav>
     
