--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -13,6 +13,7 @@
         <a href="introduction.html">Introduction</a> §
         <a href="contract.html">Contract</a> §
         <a href="tables.html">Tables</a> §
+        <a href="form.html">Form</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
