--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </header>
 
     <main>
-        <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
+      <img class = "image image_border" src = "images/duck.jpg" style="text-align:center">
+      <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
     </main>
 
 </body>
