--- a/itis3135/company/index.html
+++ b/itis3135/company/index.html
@@ -3,24 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
-    <link href="itis3135/styles/default.css" type="text/css" rel="stylesheet">
+    <title>REM Technological Industries</title>
 </head>
 
     <header>
-      <nav>
-        <a href="index.html">Home</a> §
-        <a href="itis3135/introduction.html">Introduction</a> §
-        <a href="itis3135/contract.html">Contract</a> §
-        <a href="itis3135/tables.html">Tables</a> §
-        <a href="itis3135/form.html">Form</a> §
-        <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
-      </nav>
     </header>
 
     <main>
-      <img class = "image image_border" src = "images/duck.jpg" style="text-align:center">
-      <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
+      <img src = "rem_logo.png" style="text-align:center">
+      <h1 style="text-align:center">Welcome to R.E.M Technological Industries</h1>
+      <h2 style="text-align:center">A completly legitimate, tax paying, conglomerate.</h2>
     </main>
 
 </body>
@@ -35,7 +27,7 @@
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
   </nav>
     
-  <a href="company/index.html">REM Technological Industries</a> &copy;2022
+    REM Technological Industries. &copy;2022
     
     <p>
         <a href="https://validator.w3.org/">
