--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -47,7 +47,7 @@
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
   </nav>
     
-    REM Technological Industries. &copy;2022
+  <a href="itis3135/company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
         <a href="https://validator.w3.org/">
