--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-      <img class = "image image_border" src = "images/duck.jpg" style="text-align:center">
+      <img class = "image_border" src = "itis3135/images/duck.jpg" style="text-align:center">
       <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
     </main>
 
