--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -87,7 +87,7 @@
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
   </nav>
     
-  <a href="itis3135/company/index.html">REM Technological Industries</a> &copy;2022
+  <a href="company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
         <a href="https://validator.w3.org/">
