--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="itis3135/contract.html">Contract</a> §
         <a href="itis3135/tables.html">Tables</a> §
         <a href="itis3135/form.html">Form</a> §
+        <a href="itis3135/website_evaluations.html">Website Evaluations</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
