--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -14,6 +14,7 @@
         <a href="contract.html">Contract</a> §
         <a href="tables.html">Tables</a> §
         <a href="form.html">Form</a> §
+        <a href="website_evaluations.html">Website Evaluations</a> §
         <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
       </nav>
     </header>
