--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -47,7 +47,7 @@
     
   <nav>
     <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
-    <a href="https://www.freecodecamp.org/eschlee">FreeCodeCamp</a> §
+    <a href="https://www.freecodecamp.org/IZALZO">FreeCodeCamp</a> §
     <a href="https://github.com/IZALZO">GitHub</a> §
     <a href="https://github.com/IZALZO/itis3135.github.io">GitHub.itis3135</a> §
     <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
