--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -15,7 +15,7 @@
         <a href="tables.html">Tables</a> §
         <a href="form.html">Form</a> §
         <a href="website_evaluations.html">Website Evaluations</a> §
-        <a href="https://webpages.charlotte.edu/rmauney6/">UNCC Webpage</a>
+        <a href="firstscripts.html">First Scripts</a>
       </nav>
     </header>
 
