--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -52,7 +52,7 @@
 				</header>
 			</div> <!-- /#header-wrapper -->
 			<div id="content-wrapper">
-				<p>To go to my Class website for ITIS 3135, click <a href="https://webpages.charlotte.edu/rmauney6/itis3135/">here</a>.</p>
+				<p>To go to my Class website for ITIS 3135, click <a href="https://izalzo.github.io/itis3135.github.io/">here</a>.</p>
 			</div> <!-- /#content-wrapper -->
 		</div> <!-- /#page-wrapper -->
 	</body>
