--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -16,6 +16,7 @@
         <a href="tables.html">Tables</a> §
         <a href="form.html">Form</a> §
         <a href="website_evaluations.html">Website Evaluations</a> §
+        <a href="polygon.html">Polygon</a> §
         <a href="firstscripts.html">First Scripts</a>
       </nav>
     </header>
