--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Polygon</title>
     <link href="styles/default.css" type="text/css" rel="stylesheet">
+    <script src="scripts/polygonscript.js"></script>
 </head>
 
     <header>
@@ -21,20 +22,16 @@
     </header>
 
     <main>
-        <h1 style="text-align:center">A small introduction for the founder of the Rackley Mallard</h1>
-        <img class = "image1 image_border" src="images/robert_mauney.jpeg" alt="Robert Mauney">
-        <div>
-          <p>Personal and Profesional Background:</p>
-          <ul>
-            <li>PERSONAL: Born and raised in Mint Hill North Carolina. Have an affinity for anything electronic or mechanical.</li>
-            <li>PROFESSIONAL : Have had quite a few jobs since I was 16. Currently a Manger at AutoZone.</li>
-            <li> ACADEMIC: Graduated from Hickory Grove in 2017. Have attended UNCC since and plan on graduating here.</li>
-            <li>PROGRAMMING/SOFTWARE: First introduced to coding in high school and have enjoyed it since. I know the basic languages such as java, python and c++.</li>
-            <li>From N.C.</li>
-            <li>RANDOM FACT: I drive a 1985 BMW 635csi that I am currently restoring.</li>
-          </ul>
-        </div>
-    </main>
+
+    <h2 style="text-align:center">
+        Press The Button.
+    </h2>
+    
+    <div style="text-align:center">
+      <button onclick="polygon()">Polygon</button>
+    </div>
+    
+  </main>
 
 </body>
 
