--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="itis3135/tables.html">Tables</a> §
         <a href="itis3135/form.html">Form</a> §
         <a href="itis3135/website_evaluations.html">Website Evaluations</a> §
+        <a href="itis3135/polygon.html">Website Evaluations</a> §
         <a href="itis3135/firstscripts.html">First Scripts</a>
       </nav>
     </header>
