--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
     <header>
+      <h1 style="text-align:center">Robert Mauney § ITIS 3135</h1>
       <nav>
         <a href="index.html">Home</a> §
         <a href="itis3135/introduction.html">Introduction</a> §
@@ -40,7 +41,7 @@
   <a href="itis3135/company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/">
+        <a href="https://validator.w3.org/https://izalzo.github.io/itis3135.github.io/">
             <img src="itis3135/images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
