--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Home</title>
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Tables</title>
     <link href="styles/default.css" type="text/css" rel="stylesheet">
 </head>
 
