--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="itis3135/form.html">Form</a> §
         <a href="itis3135/website_evaluations.html">Website Evaluations</a> §
         <a href="itis3135/polygon.html">Polygon</a> §
+        <a href="itis3135/calculator_try.html">Calculator Attempt</a> §
+        <a href="itis3135/calculator.html">Calculator</a> §
         <a href="itis3135/firstscripts.html">First Scripts</a>
       </nav>
     </header>
@@ -41,7 +43,7 @@
   <a href="itis3135/company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/https://izalzo.github.io/itis3135.github.io/">
+        <a href="https://validator.w3.org/">
             <img src="itis3135/images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
