--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -17,6 +17,8 @@
         <a href="form.html">Form</a> §
         <a href="website_evaluations.html">Website Evaluations</a> §
         <a href="polygon.html">Polygon</a> §
+        <a href="calculator_try.html">Calculator Attempt</a> §
+        <a href="calculator.html">Calculator</a> §
         <a href="firstscripts.html">First Scripts</a>
       </nav>
     </header>
