--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
     <header>
-      <h1 style="text-align:center">Robert Mauney § ITIS 3135</h1>
+      <h1 style="text-align:center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
       <nav>
         <a href="index.html">Home</a> §
         <a href="itis3135/introduction.html">Introduction</a> §
