--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -8,6 +8,7 @@
 </head>
 
     <header>
+      <h1 style="text-align:center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
       <nav>
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="introduction.html">Introduction</a> §
