--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-      <img class = "image_border center" src = "itis3135/images/duck.jpg" style="text-align:center">
+      <img class = "image_border center" src = "itis3135/images/duck.jpg" style= "text-align:center" alt= "Ducky">
       <h1 style="text-align:center">Welcome to the Rackley Mallard</h1>
     </main>
 
