--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <a href="itis3135/company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2F">
             <img src="itis3135/images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
