--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -79,9 +79,6 @@
     
     </main>
 
-</body>
-
-
 <footer>
     
   <nav>
@@ -99,7 +96,7 @@
             <img src="images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
-        <a href="https://jigsaw.w3.org/css-validator/">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
             <img src="images/button_validation_css.png" class="image" alt="CSS Validation">
         </a>
     </p>
