--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="itis3135/images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
-        <a href="https://jigsaw.w3.org/css-validator/">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
             <img src="itis3135/images/button_validation_css.png" class="image" alt="CSS Validation">
         </a>
     </p>
