--- a/itis3135/calculator.html
+++ b/itis3135/calculator.html
@@ -1,11 +1,10 @@
-<!--I used the tutorial from free code camp that was in the assignment--> >
-
+<!--I used the tutorial from free code camp that was in the assignment-->
 <!DOCTYPE html>
 <html lang="en-US">
 
 <head>
     <meta charset="utf-8" />
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Polygon</title>
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Calculator</title>
     <link href="styles/default.css" type="text/css" rel="stylesheet">
     <script src="scripts/calculator.js"></script>
 </head>
