--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Polygon</title>
+    <title>Robert E. Mauney § ITIS3135 § Rackley Mallard Calculator Attempt</title>
     <link href="styles/default.css" type="text/css" rel="stylesheet">
     <script src="scripts/calculator_try.js"></script>
 </head>
@@ -73,7 +73,7 @@
   <a href="company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2Fitis3135%2Fcalculator_try.html">
             <img src="images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
