--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -50,7 +50,7 @@
   <a href="company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2Fitis3135%2Fpolygon.html">
             <img src="images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
