--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -41,7 +41,7 @@
       How are you feeling: <input type="text" id="feeling" name="feeling" placeholder="How are you?">
       <br>
       <br>
-      <input onclick="firstScript()" type="button" class="submit_button" name="submit" value="Submit"></button>
+      <input onclick="firstScript()" type="button" class="submit_button" name="submit" value="Submit">
     </p>
     <p id="output"></p>
     
@@ -59,7 +59,7 @@
       What is the tax ratio: <input type="text" id="tax" name="tax" placeholder="Enter tax">
       <br>
       <br>
-      <input onclick="tax()" type="button" class="submit_button" name="submit" value="Submit"></button>
+      <input onclick="tax()" type="button" class="submit_button" name="submit" value="Submit">
     </p>
     <p id="output1"></p>
 
@@ -77,7 +77,7 @@
       What is the second number: <input type="text" id="num2" name="num2" placeholder="Enter number">
       <br>
       <br>
-      <input onclick="product()" type="button" class="submit_button" name="submit" value="Submit"></button>
+      <input onclick="product()" type="button" class="submit_button" name="submit" value="Submit">
     </p>
 
     <br>
@@ -88,7 +88,7 @@
     </h3>
     <p>
       enter year here:  <input type="text" id="year" name="year" placeholder="Enter year">
-      <input onclick="leapYear()" type="button" class="submit_button" name="submit" value="submit"></button>
+      <input onclick="leapYear()" type="button" class="submit_button" name="submit" value="submit">
     </p>
 
     <br>
@@ -96,7 +96,7 @@
 
     <h3>
       Click me for a random number between 0 and 1 million
-      <input onclick="randomNumberGenerator()" type="button" class="submit_button" name="submit" value="Random Number"></button>
+      <input onclick="randomNumberGenerator()" type="button" class="submit_button" name="submit" value="Random Number">
     </h3>
 
     <p id="output2"></p>
@@ -106,7 +106,7 @@
 
     <h3>
       Click me for a random color in hex
-      <input onclick="getRandomColor()" type="button" class="submit_button" name="submit" value="Random Color"></button>
+      <input onclick="getRandomColor()" type="button" class="submit_button" name="submit" value="Random Color">
     </h3>
 
     <p id="output3"></p>
