--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -19,6 +19,7 @@
         <a href="polygon.html">Polygon</a> §
         <a href="calculator_try.html">Calculator Attempt</a> §
         <a href="calculator.html">Calculator</a> §
+        <a href="accessibility/accessibility.html">Accessibility</a> §
         <a href="firstscripts.html">First Scripts</a>
       </nav>
     </header>
