--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="itis3135/calculator_try.html">Calculator Attempt</a> §
         <a href="itis3135/calculator.html">Calculator</a> §
         <a href="itis3135/accessibility/accessibility.html">Accessibility</a> §
+        <a href="itis3135/arrays.html">Arrays</a> §
         <a href="itis3135/firstscripts.html">First Scripts</a>
       </nav>
     </header>
