--- a/itis3135/calculator.html
+++ b/itis3135/calculator.html
@@ -22,6 +22,7 @@
         <a href="calculator_try.html">Calculator Attempt</a> §
         <a href="calculator.html">Calculator</a> §
         <a href="accessibility/accessibility.html">Accessibility</a> §
+        <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a>
       </nav>
     </header>
