--- a/itis3135/calculator.html
+++ b/itis3135/calculator.html
@@ -23,7 +23,8 @@
         <a href="calculator.html">Calculator</a> §
         <a href="accessibility/accessibility.html">Accessibility</a> §
         <a href="arrays.html">Arrays</a> §
-        <a href="firstscripts.html">First Scripts</a>
+        <a href="firstscripts.html">First Scripts</a> §
+        <a href="slideshow.html">Slideshow</a>
       </nav>
     </header>
 
