--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <a href="itis3135/calculator.html">Calculator</a> §
         <a href="itis3135/accessibility/accessibility.html">Accessibility</a> §
         <a href="itis3135/arrays.html">Arrays</a> §
-        <a href="itis3135/firstscripts.html">First Scripts</a>
+        <a href="itis3135/firstscripts.html">First Scripts</a> §
+        <a href="itis3135/slideshow.html">Slideshow</a>
+
       </nav>
     </header>
 
