--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -1,4 +1,4 @@
-<!--I used the tutorial from free code camp that was in the assignment-->
+
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -39,12 +39,12 @@
         <button type = "button" class = "prev">Previous</button>
         <button type = "button" class = "next">Next</button>
         <div class = "slider-inner">
-          <img src="images/e21.jpg" class = "active">
-          <img src="images/e12.jpg">
-          <img src="images/e9.jpg">
-          <img src="images/e30.jpg">
-          <img src="images/e28.jpg">
-          <img src="images/e24.jpg">
+          <img src="images/e21.jpg" class = "active" alt = "e21">
+          <img src="images/e12.jpg" alt = "e12">
+          <img src="images/e9.jpg" alt = "e9">
+          <img src="images/e30.jpg" alt = "e30">
+          <img src="images/e28.jpg" alt = "e28">
+          <img src="images/e24.jpg" alt = "e24">
         </div>
       </div>
       
