--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -67,7 +67,7 @@
   <a href="company/index.html">REM Technological Industries</a> &copy;2022
     
     <p>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2Fitis3135%2Fcalculator.html">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fizalzo.github.io%2Fitis3135.github.io%2Fitis3135%2Fslideshow.html">
             <img src="images/button_validation_html5.png" class="image" alt="HTML Validation">
         </a>
 
