--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <a href="itis3135/accessibility/accessibility.html">Accessibility</a> §
         <a href="itis3135/arrays.html">Arrays</a> §
         <a href="itis3135/firstscripts.html">First Scripts</a> §
-        <a href="itis3135/slideshow.html">Slideshow</a>
+        <a href="itis3135/slideshow.html">Slideshow</a> §
+        <a href="itis3135/project.html">Project</a>
 
       </nav>
     </header>
