--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -23,7 +23,8 @@
         <a href="accessibility/accessibility.html">Accessibility</a> §
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
-        <a href="slideshow.html">Slideshow</a>
+        <a href="slideshow.html">Slideshow</a> §
+        <a href="project.html">Project</a>
         
       </nav>
     </header>
