--- a/itis3135/project.html
+++ b/itis3135/project.html
@@ -28,7 +28,9 @@
         <a href="accessibility/accessibility.html">Accessibility</a> §
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
-        <a href="slideshow.html">Slideshow</a>
+        <a href="slideshow.html">Slideshow</a> §
+        <a href="project.html">Project</a>
+        
       </nav>
     </header>
 
@@ -38,10 +40,10 @@
 		<h4>Project Overview:</h4>
         <ul>
             <li>Application and Purpose: 
-                This sites purpose will be to advertise my friends mobile mechanic buisness.
+                This sites purpose will be to advertise a performance shop.
             </li>
             <li>Intended Users: 
-                Anyone who is in need of automotive repair.
+                Anyone who is in need of automotive repair/ upgrades and restorations.
             </li>
             <li>Overview of Content: 
                 This site will contain a home page, parts finder, price calculator, scheduler, and image gallary.
@@ -50,10 +52,10 @@
         <br>
         <h4>Client Information</h4>
         <ul>
-            <li>Client Name: Firas Tarieh</li>
-            <li>Client Affiliations: Friend</li>
+            <li>Client Name: Robert Mauney. Zach Pepper, Mateo Villagomez</li>
+            <li>Client Affiliations: Friends</li>
             <li>Client Email: [N/A]</li>
-            <li>Client Phone Number: [980-613-0657]</li>
+            <li>Client Phone Number: [N/A]</li>
         </ul>
         <br>
         <figue>
@@ -66,70 +68,49 @@
         <ul>
             <li><strong>Page Purpose:</strong> Introduction and buisness info. </li>
             <li><strong>Audience:</strong> People looking for mechanics</li>
-            <li><strong>Page content:</strong> Photo of work </li>
-            <li><strong>Data Entry:</strong> There will be a form within the footer for people to sign up for the club</li>
-            <li><strong>Links and Inputs:</strong> Will contain links to other resources and buttons to submit info to sign up for the club</li>
-            <li><strong>Actions:</strong> Mostly just submit buttons</li>
-            <li><strong>Special Notes:</strong> None</li>
+            <li><strong>Page content:</strong> Photo of owner, info about types of work, general vehicle information </li>
         </ul>
         <br>
-        <h4>About</h4>
+        <h4>parts finder</h4>
         <ul>
-            <li><strong>Page Purpose:</strong> Helps people with understanding the application</li>
-            <li><strong>Audience:</strong> People who want to know more about the website and its purpose</li>
-            <li><strong>Page content:</strong> information about the application and its purpose</li>
-            <li><strong>Data Entry:</strong> No data entry on this page</li>
-            <li><strong>Links and Inputs:</strong> No links or inputs</li>
-            <li><strong>Actions:</strong> No actions</li>
-            <li><strong>Special Notes:</strong> None</li>
+            <li><strong>Page Purpose:</strong> link to relative parts store websites and list of required parts for certain jobs</li>
+            <li><strong>Audience:</strong> people who want to know what they need and where to find it </li>
+            <li><strong>Page content:</strong> function that finds and list parts</li>
+            <li><strong>Links and Inputs:</strong> links to performance parts sites</li>
         </ul>
         <br>
-        <h4>Events</h4>
+        <h4>Price Calculator</h4>
         <ul>
-            <li><strong>Page Purpose:</strong> Give more information about upcoming events</li>
-            <li><strong>Audience:</strong> People who are already in the club or want to attend events the club is holding</li>
-            <li><strong>Page content:</strong> Dates and details about events coming up</li>
-            <li><strong>Data Entry:</strong> No data entry on this page</li>
-            <li><strong>Links and Inputs:</strong> Links to google maps where events are happening</li>
-            <li><strong>Actions:</strong> No actions</li>
-            <li><strong>Special Notes:</strong> None</li>
+            <li><strong>Page Purpose:</strong> inform people on average pricing</li>
+            <li><strong>Audience:</strong> for people who like to pre plan for spending</li>
+            <li><strong>Page content:</strong> general sheet that lists pricing</li>
         </ul>
         <br>
-        <h4>Club Leader</h4>
+        <h4>Schedule</h4>
         <ul>
-            <li><strong>Page Purpose:</strong> Give more information about the leader of the club</li>
-            <li><strong>Audience:</strong> People who want to better understand the client and know their background</li>
-            <li><strong>Page content:</strong> Information about club leader</li>
-            <li><strong>Data Entry:</strong> No data entry on this page</li>
-            <li><strong>Links and Inputs:</strong> None</li>
-            <li><strong>Actions:</strong> No actions</li>
-            <li><strong>Special Notes:</strong> None</li>
+            <li><strong>Page Purpose:</strong> to show openings for work and average turnaround</li>
+            <li><strong>Audience:</strong> people who like to plan for timing</li>
+            <li><strong>Page content:</strong>scheduling form</li>
+            <li><strong>Actions:</strong> form</li>
         </ul>
         <br>
-        <h4>Sign Up Form</h4>
+        <h4>Image gallary</h4>
         <ul>
-            <li><strong>Page Purpose:</strong> Allows users to sign up for the club</li>
-            <li><strong>Audience:</strong> Anyone interested in joining the club</li>
-            <li><strong>Page content:</strong> Form to take in information of users</li>
-            <li><strong>Data Entry:</strong> Takes in email, phone number, and name of users</li>
-            <li><strong>Links and Inputs:</strong> Submit button to submit user information to join club</li>
-            <li><strong>Actions:</strong> Submit button to send information within form</li>
-            <li><strong>Special Notes:</strong> None</li>
+            <li><strong>Page Purpose:</strong>show previous work</li>
+            <li><strong>Audience:</strong> people who like cool pictures</li>
+            <li><strong>Page content:</strong>pictures and information</li>
         </ul>
         <br>
         <h3>Dynamic Functionality</h3>
         <ol>
             <li>
-                The homepage will have a slideshow of images so people can view the clients 
-                events and will function like <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp">this.</a>
+                Image Gallary will use a slideshow
             </li>
             <li>
-                The sign up form will have a form to sign up for specific information or sign up for the club like 
-                <a href="http://t.news.charlotteobserver.com/webApp/mccSignupPage?siteName=charlotteobserver">this.</a>
+                the schedule will imploment a functioning calander that updates
             </li>
             <li>
-                Events Will implement a google maps window within the page and let people get the location like 
-                <a href="https://developers.google.com/maps/documentation/javascript/adding-a-google-map">this.</a>
+                price calculator will use a table and selectors same for parts finder.
             </li>
         </ol>
     </main>
