--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="itis3135/arrays.html">Arrays</a> §
         <a href="itis3135/firstscripts.html">First Scripts</a> §
         <a href="itis3135/slideshow.html">Slideshow</a> §
+        <a href="itis3135/accordion.html">Slideshow</a> §
         <a href="itis3135/project.html">Project</a>
 
       </nav>
