--- a/itis3135/calculator.html
+++ b/itis3135/calculator.html
@@ -25,6 +25,7 @@
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
+        <a href="accordion.html">Slideshow</a> §
         <a href="project.html">Project</a>
       </nav>
     </header>
