--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -24,6 +24,7 @@
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
+        <a href="accordion.html">Slideshow</a> §
         <a href="project.html">Project</a>
       </nav>
     </header>
