--- a/itis3135/project.html
+++ b/itis3135/project.html
@@ -29,6 +29,7 @@
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
+        <a href="accordion.html">Accordion</a> §
         <a href="project.html">Project</a>
         
       </nav>
