--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,7 +23,7 @@
         <a href="arrays.html">Arrays</a> §
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
-        <a href="accordion.html">Slideshow</a> §
+        <a href="accordion.html">Accordion</a> §
         <a href="project.html">Project</a>
       </nav>
     </header>
