--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="itis3135/firstscripts.html">First Scripts</a> §
         <a href="itis3135/slideshow.html">Slideshow</a> §
         <a href="itis3135/accordion.html">Accordion</a> §
+        <a href="itis3135/carousel.html">Carousel</a> §
         <a href="itis3135/project.html">Project</a>
 
       </nav>
