--- a/itis3135/polygon.html
+++ b/itis3135/polygon.html
@@ -25,6 +25,7 @@
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
         <a href="accordion.html">Accordion</a> §
+        <a href="carousel.html">Carousel</a> §
         <a href="project.html">Project</a>
       </nav>
     </header>
