--- a/itis3135/project.html
+++ b/itis3135/project.html
@@ -30,6 +30,7 @@
         <a href="firstscripts.html">First Scripts</a> §
         <a href="slideshow.html">Slideshow</a> §
         <a href="accordion.html">Accordion</a> §
+        <a href="carousel.html">Carousel</a> §
         <a href="project.html">Project</a>
         
       </nav>
