--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="itis3135/accordion.html">Accordion</a> §
         <a href="itis3135/carousel.html">Carousel</a> §
         <a href="itis3135/Activity13/mauney-Activity13.html">Activity 13</a> §
+        <a href="itis3135/Activity14/mauney-Activity14.html">Activity 14</a> §
         <a href="itis3135/project.html">Project</a>
 
       </nav>
