--- a/itis3135/mauney-activity14.html
+++ b/itis3135/mauney-activity14.html
@@ -5,9 +5,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Load Speaker Files</title>
-	<link rel="stylesheet" href="mauney-activity14.css">
+	<link rel="stylesheet" href="mauney-Activity14.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="mauney-activity14.js"></script>
+	<script src="mauney-Activity14.js"></script>
 </head>
 
 <body>
