--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="itis3135/carousel.html">Carousel</a> §
         <a href="itis3135/Activity13/mauney-Activity13.html">Activity 13</a> §
         <a href="itis3135/activity14/mauney-Activity14.html">Activity 14</a> §
-        <a href="itis3135/project/home.html">PROJECT/a> §
+        <a href="itis3135/project/home.html">PROJECT</a> §
         <a href="itis3135/project.html">Project Diag</a>
 
       </nav>
