--- a/itis3135/project/images.html
+++ b/itis3135/project/images.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Image Gallery</title>
 	<link href="styles/project.css" rel="stylesheet" type="text/css">
     <script
     src="https://code.jquery.com/jquery-3.6.0.js"
