--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -9,7 +9,7 @@
 </head>
 
     <header>
-      <h1 style="text-align:center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
+      <h1 class="center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
       <nav>
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="introduction.html">Introduction</a> §
@@ -33,7 +33,7 @@
 
     <main>
 
-    <h2 style="text-align:center">
+    <h2 class="center">
         First Scripts Page
     </h2>
     
