--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -8,7 +8,7 @@
 </head>
 
     <header>
-      <h1 style="text-align:center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
+      <h1 class = "center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
       <nav>
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="introduction.html">Introduction</a> §
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <h2 style="text-align:center">An Evalustion of Two Websites</h2>
+        <h2 class = "center">An Evalustion of Two Websites</h2>
         <h3>This webpage is meant to scrutinize two websites based off of the C.R.A.P. principles.</h3>
         <h3>Link to <a href="https://arngren.net/"> ARNGREN.net</a> a Norwegian site that deals with the sale of many items.</h3>
         <ul>
