--- a/itis3135/calculator.html
+++ b/itis3135/calculator.html
@@ -10,7 +10,7 @@
 </head>
 
     <header>
-      <h1 style="text-align:center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
+      <h1 class="center">Robert Mauney § ITIS 3135 § Rackley Mallard</h1>
       <nav>
         <a href="https://izalzo.github.io/itis3135.github.io/">Home</a> §
         <a href="introduction.html">Introduction</a> §
