--- a/itis3135/project/price_calc.html
+++ b/itis3135/project/price_calc.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
     <title>Pricing</title>
 	<link href="styles/project.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="scripts/Mauney-Activity15.js"></script>
+    
 </head>
 <body>
 	<header>
@@ -25,9 +24,82 @@
         </nav>
 	</header>
 	<main>
-        <h1>Software and Information Systems Faculty</h1>
+        <h1>Typical Price Points</h1>
+        <p>These prices are for standard work and can varry depending on vehicle and engine. For more specific long term projects please contact us through the schedular for a quote.</p>
+        <table>
+            <tr>
+              <th>Work</th>
+              <th>Turn Around</th>
+              <th>Labor Price</th>
+            </tr>
+            <tr>
+              <td>Oil Changes</td>
+              <td>1 Hour</td>
+              <td>85$</td>
+            </tr>
+            <tr>
+              <td>Spark Plugs</td>
+              <td>1 hour</td>
+              <td>50$</td>
+            </tr>
+            <tr>
+              <td>Ignition Wires</td>
+              <td>25 minutes</td>
+              <td>50$</td>
+            </tr>
+            <tr>
+              <td>Distributor</td>
+              <td>1 hour</td>
+              <td>85$</td>
+            </tr>
+            <tr>
+              <td>Valve Cover Gasket</td>
+              <td>2 Hours</td>
+              <td>150$</td>
+            </tr>
+            <tr>
+                <td>Alignment</td>
+                <td>15 minutes</td>
+                <td>35$</td>
+            </tr>
+            <tr>
+              <td>Swaybar links</td>
+              <td>25 minutes</td>
+              <td>50$ includes alignment</td>
+            </tr>
+            <tr>
+              <td>Tie Rod Ends</td>
+              <td>25 minutes</td>
+              <td>60$ includes alignment</td>
+            </tr>
+            <tr>
+                <td>Control Arms</td>
+                <td>2 hours</td>
+                <td>100$</td>
+            </tr>
+            <tr>
+                <td>Struts / Springs</td>
+                <td>3 hours</td>
+                <td>200$ for front or rear</td>
+            </tr>
+            <tr>
+                <td>Brake Pads</td>
+                <td>30 minutes</td>
+                <td>50$ for front or rear</td>
+            </tr>
+            <tr>
+                <td>Brake Rotors</td>
+                <td>35 minutes</td>
+                <td>50$ / 90$ if done with pads</td>
+            </tr>
+            <tr>
+                <td>Wiring Harnes Adaptation c101</td>
+                <td>5 hours</td>
+                <td>300$</td>
+            </tr>
+          </table>
 
-		<div id="faculty"></div>
+		
     </main>
 	<footer>
         <a href="https://izalzo.github.io/itis3135.github.io/itis3135/company/index.html">REM Technological Industries</a> &copy;2022
