--- a/itis3135/project/home.html
+++ b/itis3135/project/home.html
@@ -29,7 +29,7 @@
 	<main>
             <h2>Wolcome</h2>
             <p>
-                Old Spool Customs is a localy owned shop specializing in work on classic European, luxury and sport cars. We prode oursevles in competative pricing and honest work. Our technitions have years of experience and a fondness for all things classic.
+                Old Spool Performance is a localy owned shop specializing in work on classic European, luxury and sport cars. We pride oursevles in competative pricing and honest work. Our technitions have years of experience and a fondness for all things classic.
             </p>
             <h2>Typical Work:</h2>
             <ul >
